--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,49 @@
 <resources>
 
     <!-- Base application theme. -->
+    <!-- Light/Day mode theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#2196f3</item>
+        <item name="colorPrimaryDark">#1976d2</item>
+        <item name="colorAccent">#2196f3</item>
+        <item name="backgroundn">#fcfcfc</item>
+        <item name="cardbackground">#1976d1</item>
+        <item name="textcolor">#000000</item>
+        <item name="tintcolor">#dbdbdb</item>
+        <item name="buttoncolor1">#1976d1</item>
+        <item name="buttoncolor2">#fca90c</item>
+        <item name="buttoncolor3">#dbdbdb</item>
+        <item name="specialcolor">#dbdbdb</item>
+        <item name="buttoncolor4">#f9f9f9</item>
+        <item name="android:windowAnimationStyle">@style/Animation</item>
+        <item name="android:layoutDirection">ltr</item>
+
+    </style>
+
+    <!-- Dark/night mode theme. -->
+    <style name="darkTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#212121</item>
+        <item name="colorPrimaryDark">#000000</item>
+        <item name="colorAccent">#ffffff</item>
+        <item name="backgroundn">#303030</item>
+        <item name="cardbackground">#00274d</item>
+        <item name="textcolor">#ffffff</item>
+        <item name="specialcolor">#424242</item>
+        <item name="tintcolor">#212121</item>
+        <item name="buttoncolor1">#1976d1</item>
+        <item name="buttoncolor2">#b77b09</item>
+        <item name="buttoncolor3">#212121</item>
+        <item name="buttoncolor4">#424242</item>
+        <item name="android:windowAnimationStyle">@style/Animation</item>
+        <item name="android:layoutDirection">ltr</item>
+
+    </style>
+
+    <style name="Animation">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 
 </resources>
